Fixed overlap, double scroll, and small md-content height bugs

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -4,6 +4,7 @@
 /* Picterest styles */
 body {
   background-color: #666666;
+  overflow-y: hidden;
 }
 
 a {
@@ -212,8 +213,8 @@ i {
 
 .title-text {
   padding-top: 5px;
-  padding-right: 5px;
-  padding-left: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .subhead {
@@ -222,8 +223,4 @@ i {
 
 .no-margin {
   margin: 0 !important;
-}
-
-.scroll {
-  overflow: auto;
 }
